--- a/tax-management/src/main/resources/application.properties
+++ b/tax-management/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-server.port=8080
-server.servlet.context-path=/api/authorization
+server.port=8181
+server.servlet.context-path=/api/tax
 logging.level.org.springframework.security=TRACE
-spring.datasource.url=jdbc:mariadb://localhost:3306/tax_user_management?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/tax_management?useSSL=false
 spring.datasource.username=hadiyan
 spring.datasource.password=hadiyan
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/api/authorization/oauth2/jwks
 
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=tax-management
