--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -30,6 +30,10 @@
 			<artifactId>spring-security-oauth2-authorization-server</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
