--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -6,13 +6,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://mysql:3306/userService?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialization-mode=never
 
-# App 
-javan.user.jwtSecret=secret
-javan.user.jwtExpirationMs=86400000
+# App Properties
+user.app.jwtSecret=userSecretKey
+user.app.jwtExpirationMs=86400000
