--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 spring.application.name=user-service
+spring.main.allow-bean-definition-overriding=true
 
 # MySQL
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -7,7 +8,11 @@ spring.datasource.url=jdbc:mysql://mysql:3306/userService?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+# RabbitMQ
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
 
 # App Properties
 user.app.jwtSecret=userSecretKey
