--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:mysql://mysql:3306/userService?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 # RabbitMQ
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
