--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,16 @@ services:
     depends_on:
       - mysql
 
+  taxservice:
+    image: kacestudio/javan-taxservice
+    build: 
+      context: taxservice
+      dockerfile: Dockerfile
+    ports:
+      - 8081:8080
+    depends_on:
+      - mysql
+
   adminer:
     image: adminer:4.8.0
     ports:
