--- a/taxservice/src/main/resources/application.properties
+++ b/taxservice/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 spring.application.name=tax-service
 spring.main.allow-bean-definition-overriding=true
+spring.jackson.serialization.fail-on-empty-beans=false
 
 # MySQL
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -15,5 +16,5 @@ spring.rabbitmq.username=root
 spring.rabbitmq.password=root
 
 # App Properties
-tax.app.jwtSecret=userSecretKey
-tax.app.jwtExpirationMs=86400000
+app.jwtSecret=thisIsSecretKey
+app.jwtExpirationMs=86400000
