--- a/taxservice/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/taxservice/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,12 +1,12 @@
 {"properties": [
   {
-    "name": "tac.app.jwtSecret",
+    "name": "app.jwtSecret",
     "type": "java.lang.String",
-    "description": "A description for 'tax.app.jwtSecret'"
+    "description": "A description for 'app.jwtSecret'"
   },
   {
-    "name": "tax.app.jwtExpirationMs",
+    "name": "app.jwtExpirationMs",
     "type": "java.lang.String",
-    "description": "A description for 'tax.app.jwtExpirationMs'"
+    "description": "A description for 'app.jwtExpirationMs'"
   }
 ]}
