--- a/userservice/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/userservice/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,12 +1,12 @@
 {"properties": [
   {
-    "name": "user.app.jwtSecret",
+    "name": "app.jwtSecret",
     "type": "java.lang.String",
-    "description": "A description for 'user.app.jwtSecret'"
+    "description": "A description for 'app.jwtSecret'"
   },
   {
-    "name": "user.app.jwtExpirationMs",
+    "name": "app.jwtExpirationMs",
     "type": "java.lang.String",
-    "description": "A description for 'user.app.jwtExpirationMs'"
+    "description": "A description for 'app.jwtExpirationMs'"
   }
 ]}
