--- a/usermanagement/src/main/resources/application.properties
+++ b/usermanagement/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8081
+server.port=8080
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-spring.datasource.url=jdbc:mysql://localhost:3306/taxreportmanagement
+spring.datasource.url=jdbc:mysql://localhost:3306/usermanagement
 spring.datasource.username=root
 spring.datasource.password=04Juli00!
 spring.jpa.hibernate.ddl-auto=update
@@ -18,7 +18,6 @@ spring.rabbitmq.listener.simple.retry.max-attempts=5
 spring.rabbitmq.listener.simple.retry.max-interval=120000
 
 spring.main.allow-bean-definition-overriding=true
-
 jwt.secret=secret
 
 
